generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Courses {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  duration    Int
  created_at  DateTime @default(now())
  updated_at  DateTime @default(now())

  @@map("courses")
}

model Customers {
  id         String   @id @default(uuid())
  name       String
  orders     Orders[]
  created_at DateTime @default(now())
  updated_at DateTime @default(now())

  @@map("customers")
}

model Products {
  id          String       @id @default(uuid())
  name        String
  created_at  DateTime     @default(now())
  updated_at  DateTime     @default(now())
  order_items OrderItems[]

  @@map("products")
}

model Orders {
  id          String       @id @default(uuid())
  Customers   Customers    @relation(fields: [customer_id], references: [id])
  customer_id String
  total       Float
  date        DateTime     @default(now())
  items       OrderItems[]
  created_at  DateTime     @default(now())
  updated_at  DateTime     @default(now())

  @@map("orders")
}

model OrderItems {
  id         String   @id @default(uuid())
  orders     Orders   @relation(fields: [order_id], references: [id])
  order_id   String
  products   Products @relation(fields: [product_id], references: [id])
  product_id String
  amount     Int
  total      Float
  created_at DateTime @default(now())
  updated_at DateTime @default(now())

  @@map("order_items")
}
