@startuml courses

entity customers{
  * id: uuid <<generated>> <<pk>>
}

entity products{
  * id: uuid <<generated>> <<pk>>
}

entity orders{
  * id: uuid <<generated>> <<pk>>
  --
  * customer_id: uuid <<fk>>
  * total: number
  * date: datetime
    created_at: datetime
    updated_at: datetime
}

entity order_items{
  * id: uuid <<generated>> <<pk>>
  --
  * order_id: uuid <<fk>>
  * product_id: uuid <<fk>>
  * amount: number
  * total: number
    created_at: datetime
    updated_at: datetime
}

customers||--|{orders
orders||--|{order_items
order_items||--||products

@enduml